<resources>
    <string name="app_name">TV Shows Base</string>
<<<<<<< HEAD
=======
    <string name="sign_in_text">Sing in to your TMDb account</string>
    <string name="login_text">Login</string>
    <string name="tv_show_poster">TV Show Poster</string>
    <string name="view_profile">View Profile</string>
    <string name="log_out">Log Out</string>
    <string name="filter_by">Filter by:</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="public_score">Public score</string>
    <string name="TV_Shows_Fragment_Title">TV Shows</string>
    <string name="summary">Summary</string>
    <string name="favorite_bottom">Favorite Bottom</string>
    <string name="background_show_image">Background show image</string>
    <string name="created_by">Created by:</string>
    <string name="view_all_seasons">View All\nSeasons</string>
    <string name="poster_show_image">Poster Show Image</string>
    <string name="cast">Cast</string>
    <string name="cast_info">Cast Info Image</string>
    <string name="last_season">Last Season</string>
    <string name="episode_image">Episode Image</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="favorite_shows">Favorite Shows</string>
    <string name="no_internet_access">No internet access</string>
    <string name="error_provider">Contact your app provider</string>
    <string name="try_again">Something is wrong, try again</string>
    <string name="no_local_available">No local info available</string>
    <string name="oops_no_result_found">Oops! No Result Found :(</string>
    <string name="no_data_image">No data Image</string>

    <string-array name="showsFilter">
        <item>Popular</item>
        <item>Top Rated</item>
        <item>On TV</item>
        <item>Airing Today</item>
    </string-array>

>>>>>>> develop
</resources>